[package]
name = "Leaderboard"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
ciborium = "0.2.2"
fs2 = "0.4.3"
indexset = { version = "0.12.2", features = ["serde"] }
memmap2 = "0.9.5"
rocket = "0.5.1"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
